{{$NEXT}}

0.000083  2017-10-25 08:12:18-07:00 America/Los_Angeles

    - Mark a float ests TODO until the PR author can fix it

0.000082  2017-10-20 07:11:08-07:00 America/Los_Angeles

    - No Changes since last trial

0.000081  2017-10-19 09:09:14-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Test2::Compare::Float to handle floating point comparison issues with
      representation error.
    - Add float() to Test2::Utils::Compare and import Test2::Compare::Float
    - Import and Export Test2::Utils::Compare::float in Test2::V0
    - Documentation fixes
    - Better 5.10.0/utf8 fix
    - VSTRING comparisons
    - Bag compare now handles duplicates better

0.000080  2017-10-15 10:13:30-07:00 America/Los_Angeles

    - No changes since last trial

0.000079  2017-10-14 20:18:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - (Colin Newell) Fix UTF8 issue with perl 5.10.0

0.000078  2017-10-14 20:15:21-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix for TODO + new ok style

0.000077  2017-09-12 07:49:16-07:00 America/Los_Angeles

    - No changes since last TRIAL release

0.000076  2017-09-11 15:21:07-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Test2::Tools::GenTemp

0.000075  2017-09-10 21:22:17-07:00 America/Los_Angeles

    - Add version to Test2::Event::Times

0.000074  2017-08-31 20:37:47-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Test2::Event::Times
    - Fix some tests that were failing in yath

0.000073  2017-08-30 23:11:28-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Test2::Plugin::Times

0.000072  2017-06-17 21:48:14-07:00 America/Los_Angeles

    - No change since last trial

0.000071  2017-06-10 13:40:27-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Introduce Test2::V# bundles
    - Deprecate Test2::Bundle::Extended
    - Test2::V0 added
    - Fix Test2::Mock doesn't accept non-ref values (Mike Raynham)
    - Fix isa_ok overload issue (Mike Raynham)

0.000070  2017-03-19 13:34:25-07:00 America/Los_Angeles
